--- a/src/Conponants/Navigation.css
+++ b/src/Conponants/Navigation.css
@@ -6,9 +6,12 @@
 .navbar{
     width: 100%;
     /* background: url() no-repeat; */
-    /* background-color: rgba(0,0,0,0.2); */
+    background-color: rgb(255,255,255);
     background-size: cover;
     /* height: 100vh; */
+    padding: 0.5vh 0;
+    position: fixed;
+    z-index: 1;
 }
 .navContent{
     display: flex;
