--- a/src/Conponants/Blogs.css
+++ b/src/Conponants/Blogs.css
@@ -5,9 +5,6 @@
 }
 .blogsPage{
     padding-top: 8vh;
-    /* background: url(https://www.originalbuddhas.com/images/ricepaper.jpg) no-repeat; */
-    background-size: cover;
-    background-color: #ddd;
 }
 .centralDiv{
     height: 73vh;
@@ -91,4 +88,69 @@
     background-color: #ffdb0d;
     padding: 2vh 1vw ;
     border-radius: 100%;
+}
+.card-top{
+    display: flex;
+    align-items: center;
+    padding: 0.5vw 1vw;
+}
+#bloghead{
+    display: flex;
+    justify-content: space-between;
+    
+}
+#menu{
+    cursor: pointer;
+}
+#logger-blog-img{
+    padding: 1vw;
+    font-size: large;
+}
+#logger-blog-title{
+    padding: 1vw;
+    border-radius: 5px;
+    font-size: large;
+}
+textarea{
+    height: 30vh;
+    font-size: large;
+    padding: 1vw;
+}
+#bottom{
+    position: absolute;
+    left: 1%;
+    padding: 0.7vw;
+    border-radius: 50%;
+    background-color: gray;
+    color: white;
+    border: none;
+    outline: none;
+    
+}
+
+@media screen and (max-width: 1000px) {
+    .blog{
+        width: 35%;
+    }
+}
+@media screen and (max-width: 820px) {
+    .blog{
+        width: 48%;
+    }
+    .centralDiv>img{
+        height: 80%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .blog{
+        width: 60%;
+    }
+    .centralDiv{
+        height: 100%;
+    }
+}
+@media screen and (max-width: 400px) {
+    .blog{
+        width: 80%;
+    }
 }
