--- a/src/Conponants/Liked.css
+++ b/src/Conponants/Liked.css
@@ -20,7 +20,7 @@
     width: 23vw;
     height: 55vh;
     margin-top: 5vh;
-    background-color: lightgreen;
+    background-color: white;
     border-radius: 7px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -37,6 +37,7 @@
     cursor:pointer;
     transform: scale(1.05);
     transition: .8s ease-in-out all;
+    object-fit: fill;
 }
 .likedcontent{
     padding: 1vw 2vw;
@@ -53,9 +54,35 @@
     align-items: center;
 }
 .likedBottomBlog Button{
-    background-color: tomato;
+    background-color: #ffdb0d;
+    color: black;
     cursor: pointer;
 }
 .likedBottomBlog Button:hover{
     background-color: rgba(239, 100, 76, 0.897);
+}
+.errorDiv{
+    margin: auto;
+    margin-top: 20vh;
+}
+
+@media screen and (max-width: 1000px) {
+    .likedBlog{
+        width: 35%;
+    }
+}
+@media screen and (max-width: 820px) {
+    .likedBlog{
+        width: 48%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .likedBlog{
+        width: 60%;
+    }
+}
+@media screen and (max-width: 400px) {
+    .likedBlog{
+        width: 80%;
+    }
 }
